welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var i=0
while (sortieTrouvee()=false){
	do{
		for (j=1 to 5){
			avance()
			if (estSurBiscuit()){
				avance()
				j+=1
				i+=1
			}
			if (i=>3)
			gauche()
		}else {
			droite()
		}
	}while (croisement=false)
}
avance()